--- a/viagens.html
+++ b/viagens.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <div class="container-cabecalho">
-        <h1>Welcome to Traveler</h1>
+        <h1>Traveler</h1>
     <nav>
         <ul class="menu-navegacao">
             <li><a href="index.html" class="btn-home">Home</a></li>
