--- a/index.html
+++ b/index.html
@@ -12,28 +12,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="movetela">
+    <!-- Container que servirá de fundo para a página -->
+    <div class="fundo-pagina">
+        <div class="carrousel">
+            <img src="./imagens/pexels-lin-2156561570-34309248.jpg" >
+            <img src="./imagens/pexels-navneet-kaur-189549983-34407920.jpg" >
+            <img src="./imagens/pexels-lin-2156561570-34309248.jpg" >
+        </div> 
+    </div>
     <main>
-        <section>
-            <section>
-                <div class="carrousel">
-                    <img src="./imagens/pexels-lin-2156561570-34309248.jpg" >
-                    <img src="./imagens/pexels-navneet-kaur-189549983-34407920.jpg" >
-                    <img src="./imagens/pexels-lin-2156561570-34309248.jpg" >
-                </div> 
-            </section>
-            <section>
-                <div class="banner-principal">
-                    <h1>Traveler</h1>
-                    <p>Lorem ipsum dolor sit</p>
-                    <button id="btn-entrar">Entrar</button>
-                </div>
-            </section>
+        <div class="banner-principal">
+            <h1>Traveler</h1>
+            <p>Lorem ipsum dolor sit</p>
+            <button id="btn-entrar">Entrar</button>
+        </div>
     </main>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="main.js"></script>
-    </div>
 </body>
 </html>
